// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`anonymous grading doesnt show users names 1`] = `
<View>
  <TouchableHighlight
    accessibilityTraits={
      Array [
        "button",
      ]
    }
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
    testID="submission-1"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "flex": 1,
          "flexDirection": "row",
          "paddingBottom": 10,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 10,
        }
      }
    >
      <View
        style={
          Object {
            "height": 40,
            "marginRight": 8,
            "width": 40,
          }
        }
      >
        <Avatar
          avatarURL={null}
          onPress={[Function]}
          userName="Student"
        />
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "paddingLeft": 8,
          }
        }
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={2}
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
                "fontWeight": "600",
              },
              Object {
                "fontFamily": ".SFUIDisplay-semibold",
              },
            ]
          }
        >
          Student
        </Text>
        <Text
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Array [
                Object {
                  "fontSize": 14,
                  "paddingTop": 2,
                },
                undefined,
                Object {
                  "color": "#8B969E",
                },
              ],
              Object {
                "fontFamily": ".SFUIDisplay",
              },
            ]
          }
        >
          Not Submitted
        </Text>
      </View>
      <Text
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "color": "#374A59",
                "fontSize": 14,
                "fontWeight": "600",
              },
              Object {
                "alignSelf": "center",
              },
            ],
            Object {
              "fontFamily": ".SFUIDisplay-semibold",
            },
          ]
        }
      >
        --
      </Text>
    </View>
  </TouchableHighlight>
</View>
`;

exports[`excused row renders correctly 1`] = `
<View>
  <TouchableHighlight
    accessibilityTraits={
      Array [
        "button",
      ]
    }
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
    testID="submission-1"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "flex": 1,
          "flexDirection": "row",
          "paddingBottom": 10,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 10,
        }
      }
    >
      <View
        style={
          Object {
            "height": 40,
            "marginRight": 8,
            "width": 40,
          }
        }
      >
        <Avatar
          avatarURL="https://cats.pajamas/"
          onPress={[Function]}
          userName="Green Latern"
        />
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "paddingLeft": 8,
          }
        }
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={2}
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
                "fontWeight": "600",
              },
              Object {
                "fontFamily": ".SFUIDisplay-semibold",
              },
            ]
          }
        >
          Green Latern
        </Text>
        <Text
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Array [
                Object {
                  "fontSize": 14,
                  "paddingTop": 2,
                },
                undefined,
                Object {
                  "color": "#EE0612",
                },
              ],
              Object {
                "fontFamily": ".SFUIDisplay",
              },
            ]
          }
        >
          Missing
        </Text>
      </View>
      <Text
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "color": "#374A59",
                "fontSize": 14,
                "fontWeight": "600",
              },
              Object {
                "alignSelf": "center",
              },
            ],
            Object {
              "fontFamily": ".SFUIDisplay-semibold",
            },
          ]
        }
      >
        Excused
      </Text>
    </View>
  </TouchableHighlight>
</View>
`;

exports[`late graded row renders correctly 1`] = `
<View>
  <TouchableHighlight
    accessibilityTraits={
      Array [
        "button",
      ]
    }
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
    testID="submission-1"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "flex": 1,
          "flexDirection": "row",
          "paddingBottom": 10,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 10,
        }
      }
    >
      <View
        style={
          Object {
            "height": 40,
            "marginRight": 8,
            "width": 40,
          }
        }
      >
        <Avatar
          avatarURL="https://cats.pajamas/"
          onPress={[Function]}
          userName="Green Latern"
        />
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "paddingLeft": 8,
          }
        }
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={2}
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
                "fontWeight": "600",
              },
              Object {
                "fontFamily": ".SFUIDisplay-semibold",
              },
            ]
          }
        >
          Green Latern
        </Text>
        <Text
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Array [
                Object {
                  "fontSize": 14,
                  "paddingTop": 2,
                },
                undefined,
                Object {
                  "color": "#FC5E13",
                },
              ],
              Object {
                "fontFamily": ".SFUIDisplay",
              },
            ]
          }
        >
          Late
        </Text>
      </View>
      <Text
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "color": "#374A59",
                "fontSize": 14,
                "fontWeight": "600",
              },
              Object {
                "alignSelf": "center",
              },
            ],
            Object {
              "fontFamily": ".SFUIDisplay-semibold",
            },
          ]
        }
      >
        B-
      </Text>
    </View>
  </TouchableHighlight>
</View>
`;

exports[`missing ungraded row renders correctly 1`] = `
<View>
  <TouchableHighlight
    accessibilityTraits={
      Array [
        "button",
      ]
    }
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
    testID="submission-1"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "flex": 1,
          "flexDirection": "row",
          "paddingBottom": 10,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 10,
        }
      }
    >
      <View
        style={
          Object {
            "height": 40,
            "marginRight": 8,
            "width": 40,
          }
        }
      >
        <Avatar
          avatarURL="https://cats.pajamas/"
          onPress={[Function]}
          userName="Green Latern"
        />
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "paddingLeft": 8,
          }
        }
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={2}
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
                "fontWeight": "600",
              },
              Object {
                "fontFamily": ".SFUIDisplay-semibold",
              },
            ]
          }
        >
          Green Latern
        </Text>
        <Text
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Array [
                Object {
                  "fontSize": 14,
                  "paddingTop": 2,
                },
                undefined,
                Object {
                  "color": "#EE0612",
                },
              ],
              Object {
                "fontFamily": ".SFUIDisplay",
              },
            ]
          }
        >
          Missing
        </Text>
      </View>
      <Text
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "color": "#374A59",
                "fontSize": 14,
                "fontWeight": "600",
              },
              Object {
                "alignSelf": "center",
              },
            ],
            Object {
              "fontFamily": ".SFUIDisplay-semibold",
            },
          ]
        }
      >
        --
      </Text>
    </View>
  </TouchableHighlight>
</View>
`;

exports[`submitted not_graded row renders correctly 1`] = `
<View>
  <TouchableHighlight
    accessibilityTraits={
      Array [
        "button",
      ]
    }
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
    testID="submission-1"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "flex": 1,
          "flexDirection": "row",
          "paddingBottom": 10,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 10,
        }
      }
    >
      <View
        style={
          Object {
            "height": 40,
            "marginRight": 8,
            "width": 40,
          }
        }
      >
        <Avatar
          avatarURL="https://cats.pajamas/"
          onPress={[Function]}
          userName="Green Latern"
        />
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "paddingLeft": 8,
          }
        }
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={2}
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
                "fontWeight": "600",
              },
              Object {
                "fontFamily": ".SFUIDisplay-semibold",
              },
            ]
          }
        >
          Green Latern
        </Text>
      </View>
      <Text
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "color": "#374A59",
                "fontSize": 14,
                "fontWeight": "600",
              },
              Object {
                "alignSelf": "center",
              },
            ],
            Object {
              "fontFamily": ".SFUIDisplay-semibold",
            },
          ]
        }
      >
        --
      </Text>
    </View>
  </TouchableHighlight>
</View>
`;

exports[`submitted ungraded row renders correctly 1`] = `
<View>
  <TouchableHighlight
    accessibilityTraits={
      Array [
        "button",
      ]
    }
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
    testID="submission-1"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "flex": 1,
          "flexDirection": "row",
          "paddingBottom": 10,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 10,
        }
      }
    >
      <View
        style={
          Object {
            "height": 40,
            "marginRight": 8,
            "width": 40,
          }
        }
      >
        <Avatar
          avatarURL="https://cats.pajamas/"
          onPress={[Function]}
          userName="Green Latern"
        />
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "paddingLeft": 8,
          }
        }
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={2}
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
                "fontWeight": "600",
              },
              Object {
                "fontFamily": ".SFUIDisplay-semibold",
              },
            ]
          }
        >
          Green Latern
        </Text>
        <Text
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Array [
                Object {
                  "fontSize": 14,
                  "paddingTop": 2,
                },
                undefined,
                Object {
                  "color": "#07AF1F",
                },
              ],
              Object {
                "fontFamily": ".SFUIDisplay",
              },
            ]
          }
        >
          Submitted
        </Text>
        <Text
          color="#368BD8"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Array [
                Object {
                  "backgroundColor": "white",
                  "borderRadius": 9,
                  "borderWidth": 1,
                  "fontSize": 11,
                  "fontWeight": "500",
                  "overflow": "hidden",
                  "paddingBottom": 0,
                  "paddingLeft": 6,
                  "paddingRight": 6,
                  "paddingTop": 3,
                  "textAlign": "center",
                },
                Object {
                  "borderColor": "#368BD8",
                  "color": "#368BD8",
                },
                Object {
                  "alignSelf": "flex-start",
                  "marginTop": 8,
                },
              ],
              Object {
                "fontFamily": ".SFUIDisplay-medium",
              },
            ]
          }
        >
          NEEDS GRADING
        </Text>
      </View>
      <Text
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "color": "#374A59",
                "fontSize": 14,
                "fontWeight": "600",
              },
              Object {
                "alignSelf": "center",
              },
            ],
            Object {
              "fontFamily": ".SFUIDisplay-semibold",
            },
          ]
        }
      >
        --
      </Text>
    </View>
  </TouchableHighlight>
</View>
`;

exports[`unsubmitted ungraded row renders correctly 1`] = `
<View>
  <TouchableHighlight
    accessibilityTraits={
      Array [
        "button",
      ]
    }
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
    testID="submission-1"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "flex": 1,
          "flexDirection": "row",
          "paddingBottom": 10,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 10,
        }
      }
    >
      <View
        style={
          Object {
            "height": 40,
            "marginRight": 8,
            "width": 40,
          }
        }
      >
        <Avatar
          avatarURL="https://cats.pajamas/"
          onPress={[Function]}
          userName="Green Latern"
        />
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "paddingLeft": 8,
          }
        }
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={2}
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
                "fontWeight": "600",
              },
              Object {
                "fontFamily": ".SFUIDisplay-semibold",
              },
            ]
          }
        >
          Green Latern
        </Text>
        <Text
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Array [
                Object {
                  "fontSize": 14,
                  "paddingTop": 2,
                },
                undefined,
                Object {
                  "color": "#8B969E",
                },
              ],
              Object {
                "fontFamily": ".SFUIDisplay",
              },
            ]
          }
        >
          Not Submitted
        </Text>
      </View>
      <Text
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "color": "#374A59",
                "fontSize": 14,
                "fontWeight": "600",
              },
              Object {
                "alignSelf": "center",
              },
            ],
            Object {
              "fontFamily": ".SFUIDisplay-semibold",
            },
          ]
        }
      >
        --
      </Text>
    </View>
  </TouchableHighlight>
</View>
`;
